Refactor VesselService